Updated all docs

--- a/docs/src/styles/app.scss
+++ b/docs/src/styles/app.scss
@@ -36,3 +36,7 @@ $secondary-color: darken($mustard, 15);
 body {
    // background-color: #ebebeb;
 }
+
+pre[class*="language-"] {
+  background: #f6f8fa;
+}
